--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.2.1",
     "nodemon": "^2.0.22",
-    "xpress": "^2.4.6"
+    "xpress": "^2.4.6",
+    "zod": "^3.21.4",
+    "zod-express-middleware": "^1.4.0"
   }
 }
